Pre-Anthropic Writeout

--- a/src/illustrator/web/templates/style_config.html
+++ b/src/illustrator/web/templates/style_config.html
@@ -41,6 +41,7 @@
                                     <option value="dalle">DALL-E</option>
                                     <option value="imagen4">Imagen 4</option>
                                     <option value="flux">Flux</option>
+                                    <option value="seedream">Seedream 4</option>
                                 </select>
                                 <div class="form-text">Choose the AI image generation provider</div>
                             </div>
