--- a/src/illustrator/web/templates/base.html
+++ b/src/illustrator/web/templates/base.html
@@ -132,7 +132,7 @@
                 </div>
                 <div class="modal-body">
                     <form id="apiKeysForm">
-                        <div class="mb-4">
+                        <div class="bg-body-tertiary border rounded-3 p-3 mb-4">
                             <h6 class="text-uppercase fw-semibold text-muted small mb-3">Language Model Access</h6>
                             <div class="row g-3">
                                 <div class="col-md-6">
@@ -202,7 +202,7 @@
                             </div>
                         </div>
 
-                        <div class="mb-4">
+                        <div class="bg-body-tertiary border rounded-3 p-3 mb-3">
                             <h6 class="text-uppercase fw-semibold text-muted small mb-3">Image Generation Providers</h6>
                             <div class="row g-3">
                                 <div class="col-md-6">
